# gitlab-mcp-server

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/gitlab_mcp_server/: __init__.py
src/mcp_gitlab_server/: __init__.py
